testsuite/tests/qualified-strings/should_fail/qstrings_bad_pat.stderr
qstrings_bad_pat.hs:9:5: error: [GHC-83865]
    • Couldn't match type ‘[Char]’ with ‘Int’
      Expected: String
        Actual: Int
    • In the pattern:
        Length."this fails after being converted into an Int"
      In a case alternative:
          Length."this fails after being converted into an Int" -> pure ()
      In the expression:
        case "" of
          Length."this fails after being converted into an Int" -> pure ()
          _ -> pure ()
